--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <span>
-            YOUR NAME
+            Robert Routhier
         </span>
         <ul>
             <a href="#about">
@@ -31,7 +31,7 @@
     </nav>
     <div class="jumbo">
         <div class="cool-title">
-            COOL TITLE HERE!
+            Robert Routhier Portfolio
         </div>
     </div>
 
@@ -39,32 +39,48 @@
         <section>
             <div class="title">About Me</div>
             <div class="content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quod quasi minima voluptate, delectus hic laboriosam distinctio eius magnam tempora ab culpa ipsam facere, repudiandae quam iste. Beatae, magni magnam.
+                I am a full stack web developer from Irvine. Currently under a year experience with skills in Javascript, HTML and CSS. I have 6 years experience in operation management of a company that manufactures and distributes products!
             </div>
         </section>
         <section>
-            <div class="title">Work</div>
+            <div id="work" class="title">Work</div>
             <div class="content work-container">
-                <div class="project featured">
+                <div class="project-featured">
                     <div class="project-name">
-                        MY PROJECT NAME
+                        Portfolio Project
                     </div>
                 </div>
-                <div class="project"></div>
-                <div class="project"></div>
-                <div class="project"></div>
-                <div class="project"></div>
+                <div class="project">
+                    <div class="coming">
+                        Coming soon!
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="coming">
+                        Coming soon!
+                    </div> 
+                </div>
+                <div class="project">
+                    <div class="coming"> 
+                        Coming soon!
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="coming">
+                        Coming soon!
+                    </div>
+                </div>
             </div>
         </section>
         <section>
-            <div class="title">Contact</div>
+            <div id="contact" class="title">Contact</div>
             <div class="content contact-info">
                 <ul>
-                    <li>555.555.5555</li>
-                    <li>youremail@mail.com</li>
-                    <li>github</li>
-                    <li>twitter</li>
-                    <li>tiktok</li>
+                    <li>714.681.6393</li>
+                    <li>robrouth92@gmail.com</li>
+                    <li>Github</li>
+                    <li>LinkedIn</li>
+                    
                 </ul>
             </div>
         </section>
