--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <div class="content contact-info">
                 <ul>
                     <li>714.681.6393</li>
-                    <li>robrouth92@gmail.com</li>
-                    <li>Github</li>
-                    <li>LinkedIn</li>
+                    <a href="mailto:robrouth92@gmail.com"><li>robrouth92@gmail.com</li></a>
+                   <a href="https://github.com/RobertRouthier"><li>Github</li></a>
+                    <a href="https://www.linkedin.com/in/robert-routhier-976367116/"><li>LinkedIn</li></a>
                     
                 </ul>
             </div>
