--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="title">About Me</div>
             <div class="content">
                 I am a full stack web developer from Irvine. Currently under a year experience with skills in Javascript, HTML and CSS. I have 6 years experience in operation management of a company that manufactures and distributes products!
+                I have some experience working with API's, local storage and everything in between. Please check out my projects below by clicking on them!
             </div>
         </section>
         <section>
@@ -47,12 +48,12 @@
             <div class="content work-container">
                 <div class="project-featured">
                     <div class="project-name">
-                       Portfolio Project
+                       <a href="https://robertrouthier.github.io/New2/">Portfolio Project</a>
                     </div>
                 </div>
-                <div class="project">
+                <div class="project-one">
                     <div class="coming">
-                        Coming soon!
+                       <a href="https://fluffykyubey.github.io/Lost-Ark-Group-Finder/index.html">Lost Ark Group Finder</a>
                     </div>
                 </div>
                 <div class="project">
