new project added

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <a href="#contact">
                 <li>Contact Me</li>
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/robert-routhier-976367116/">
                 <li>Resume</li>
             </a>
         </ul>
     </nav>
     <div class="jumbo">
         <div class="cool-title">
-            Robert Routhier Portfolio
+           
         </div>
     </div>
 
@@ -39,8 +39,9 @@
         <section>
             <div class="title">About Me</div>
             <div class="content">
-                I am a full stack web developer from Irvine. Currently under a year experience with skills in Javascript, HTML and CSS. I have 6 years experience in operation management of a company that manufactures and distributes products!
-                I have some experience working with API's, local storage and everything in between. Please check out my projects below by clicking on them!
+                I am a full stack web developer from Irvine. Currently under a year experience with skills in Javascript, HTML, CSS, Node.js, Express.js, 
+                Heroku, MySQL, Sequalize, Handlebars.js and everything in between. Front end and backend experience. I have 6 years experience in operation management of a company that manufactures and distributes products!
+                Please check out my projects below by clicking on them!
             </div>
         </section>
         <section>
@@ -56,9 +57,9 @@
                        <a href="https://fluffykyubey.github.io/Lost-Ark-Group-Finder/index.html">Lost Ark Group Finder</a>
                     </div>
                 </div>
-                <div class="project">
+                <div class="project-two">
                     <div class="coming">
-                        Coming soon!
+                        <a href="https://github.com/RobertRouthier/Project-2-Watch-and-Sell">Watch and Sell</a>
                     </div> 
                 </div>
                 <div class="project">
